// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabulator /> should have two different levels of headings 1`] = `
<div>
  <div
    class="sc-d69a28e-0 ctBffQ"
    data-rttabs="true"
  >
    <div
      class="sc-d69a28e-1 gogiul"
    >
      <ul
        class="sc-d69a28e-2 dDhiAS"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-1"
          aria-disabled="false"
          aria-selected="true"
          class="sc-d69a28e-3 djLETL react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-0"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-3"
          aria-disabled="false"
          aria-selected="false"
          class="sc-d69a28e-3 djLETL"
          data-rttab="true"
          id="react-tabs-2"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-0"
      class="sc-d69a28e-4 hsuUYW react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        class="sc-f92038f6-0 llOtbb"
      >
        <h2
          class="sc-a53a0f9a-0 bIsTsN"
        >
          CDI
        </h2>
      </div>
      <div
        class="sc-d69a28e-5 fjXncv"
      >
        <h3
          class="sc-a53a0f9a-0 bIsTsN"
        >
          titre 1
        </h3>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="sc-d69a28e-4 hsuUYW"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should incease heading levels if not 0 1`] = `
<div>
  <div
    class="sc-d69a28e-0 ctBffQ"
    data-rttabs="true"
  >
    <div
      class="sc-d69a28e-1 gogiul"
    >
      <ul
        class="sc-d69a28e-2 dDhiAS"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-5"
          aria-disabled="false"
          aria-selected="true"
          class="sc-d69a28e-3 djLETL react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-4"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-7"
          aria-disabled="false"
          aria-selected="false"
          class="sc-d69a28e-3 djLETL"
          data-rttab="true"
          id="react-tabs-6"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-4"
      class="sc-d69a28e-4 hsuUYW react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        class="sc-f92038f6-0 llOtbb"
      >
        <h3
          class="sc-a53a0f9a-0 bIsTsN"
        >
          CDI
        </h3>
      </div>
      <div
        class="sc-d69a28e-5 fjXncv"
      >
        <h4
          class="sc-a53a0f9a-0 bIsTsN"
        >
          titre 1
        </h4>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="sc-d69a28e-4 hsuUYW"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should render 1`] = `
<div>
  <div
    class="sc-d69a28e-0 ctBffQ"
    data-rttabs="true"
  >
    <div
      class="sc-d69a28e-1 gogiul"
    >
      <ul
        class="sc-d69a28e-2 dDhiAS"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-9"
          aria-disabled="false"
          aria-selected="true"
          class="sc-d69a28e-3 djLETL react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-8"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-11"
          aria-disabled="false"
          aria-selected="false"
          class="sc-d69a28e-3 djLETL"
          data-rttab="true"
          id="react-tabs-10"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-8"
      class="sc-d69a28e-4 hsuUYW react-tabs__tab-panel--selected"
      id="react-tabs-9"
      role="tabpanel"
    >
      <div
        class="sc-f92038f6-0 llOtbb"
      >
        <h4
          class="sc-a53a0f9a-0 bIsTsN"
        >
          CDI
        </h4>
      </div>
      <div
        class="sc-d69a28e-5 fjXncv"
      >
        <h5
          class="sc-a53a0f9a-0 bIsTsN"
        >
          titre 1
        </h5>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-10"
      class="sc-d69a28e-4 hsuUYW"
      id="react-tabs-11"
      role="tabpanel"
    />
  </div>
</div>
`;
